# OpenBRS

./: .gitignore  Cargo.toml  archive-2024-12-19 19:12:10.209104654 UTC.tar
openbrs_archv_cmprss/: Cargo.toml
openbrs_archv_cmprss/src/: lib.rs
openbrs_backup/: Cargo.toml
openbrs_backup/src/: lib.rs
openbrs_compare/: Cargo.toml
openbrs_compare/src/: lib.rs
openbrs_crypto/: Cargo.toml
openbrs_crypto/src/: lib.rs
openbrs_main/: Cargo.toml
openbrs_main/src/: main.rs
openbrs_main_structs/: Cargo.toml
openbrs_main_structs/src/: lib.rs
openbrs_stage/: Cargo.toml
openbrs_stage/src/: lib.rs
openbrs_versioning/: Cargo.toml
openbrs_versioning/src/: lib.rs
src/: lib.rs  main.rs
