[package]
name = "openbrs_main"
version = "0.1.0"
edition = "2024"

[dependencies]
openbrs_archv_cmprss = { path = "../openbrs_archv_cmprss/" }
openbrs_crypto = { path = "../openbrs_crypto/" }
openbrs_versioning = { path = "../openbrs_versioning" }
serde = { version = "1.0.219", features = ["derive"] } # For metadata file
serde_json = "1.0.145"
